Add Custom Fonts

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -28,6 +28,8 @@ const {
     <meta name="viewport" content="width=device-width" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="generator" content={Astro.generator} />
+    <!-- TypeKit Font Includes: Oswald & Veener Fonts -->
+    <link rel="stylesheet" href="https://use.typekit.net/hfp3usx.css" />
     <title>{title}</title>
   </head>
   <body class={pageClass}>
