--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -4,6 +4,7 @@ import "../styles/style.scss";
 import Header from "../components/Header.astro";
 import Footer from "../components/Footer.astro";
 import ISI from "../components/ISI.astro";
+import CookieBanner from "../components/CookieBanner.astro";
 export interface Props {
   title: string;
   pageClass?: string;
@@ -39,6 +40,7 @@ const {
     </main>
     {showISI && <ISI />}
     {showFooter && <Footer />}
+    <CookieBanner />
   </body>
   <script src="/assets/js/script.js" type="module"></script>
 </html>
