--- a/src/components/Navigation/FooterNavigation.astro
+++ b/src/components/Navigation/FooterNavigation.astro
@@ -1,13 +1,33 @@
 <nav class="footer__nav">
-  <ul class="footer__nav_menu">
+  <ul class="footer__nav_menu footer__nav_first">
     <li class="footer__nav_menu_item">
-      <a class="footer__nav_menu_item_link" href="#">Footer Menu Item 1</a>
+      <a class="footer__nav_menu_item_link" href="/">Home</a>
     </li>
     <li class="footer__nav_menu_item">
-      <a class="footer__nav_menu_item_link" href="#">Footer Menu Item 2</a>
+      <a class="footer__nav_menu_item_link" href="#">ALP Academy</a>
     </li>
     <li class="footer__nav_menu_item">
-      <a class="footer__nav_menu_item_link" href="#">Footer Menu Item 3</a>
+      <a class="footer__nav_menu_item_link" href="#">HPP Profile</a>
+    </li>
+    <li class="footer__nav_menu_item">
+      <a class="footer__nav_menu_item_link" href="#">Usual Suspects</a>
+    </li>
+    <li class="footer__nav_menu_item">
+      <a class="footer__nav_menu_item_link" href="#">Identifying HPP</a>
+    </li>
+  </ul>
+  <ul class="footer__nav_menu footer__nav_second">
+    <li class="footer__nav_menu_item">
+      <a class="footer__nav_menu_item_link" href="#">Legal</a>
+    </li>
+    <li class="footer__nav_menu_item">
+      <a class="footer__nav_menu_item_link" href="#">Privacy Notice</a>
+    </li>
+    <li class="footer__nav_menu_item">
+      <a class="footer__nav_menu_item_link" href="#">Site Map</a>
+    </li>
+    <li class="footer__nav_menu_item">
+      <a class="footer__nav_menu_item_link" href="#">Terms of Use</a>
     </li>
   </ul>
 </nav>
