--- a/src/styles/settings/_variables.scss
+++ b/src/styles/settings/_variables.scss
@@ -4,20 +4,26 @@ as the value
 
 And we are goint to use it in _utils.scss*/
 $colors: (
-    "dark-blue-gray": #666CA3,
-    "dark-blue": #13183F,
-    "waterloo": #83869A,
-    "violet-red": #F74780,
-    "pink": #FFA7C3,
+    "folder": #F3E6C3,
+    "red": #CF1C0A,
+    "blue": #526CAD,
+    "green": #617D44,
+    "platinum": #DFE2E9,
+    "envelop": #E2A842,
+    "granite-grey": #626468,
+    "carbon": #1F1511,
+    "texture": #E5E9F2,
     "black": #000000,
     "white": #FFFFFF,
-    "red": #FF0000,
 );
-$color-white: #FFFFFF;
-$color-black: #000000;
-$color-dark-blue-gray: #666CA3;
-$color-dark-blue: #13183F;
-$color-waterloo: #83869A;
-$color-violet-red: #F74780;
-$color-pink: #FFA7C3;
-$color-red: #FF0000;
+$color-folder: map-get($colors, "folder");
+$color-red: map-get($colors, "red");
+$color-blue: map-get($colors, "blue");
+$color-green: map-get($colors, "green");
+$color-platinum: map-get($colors, "platinum");
+$color-envelop: map-get($colors, "envelop");
+$color-granite-grey: map-get($colors, "granite-grey");
+$color-carbon: map-get($colors, "carbon");
+$color-texture: map-get($colors, "texture");
+$color-black: map-get($colors, "black");
+$color-white: map-get($colors, "white");
