Update Cookie Content.

--- a/src/components/CookieBanner.astro
+++ b/src/components/CookieBanner.astro
@@ -2,8 +2,9 @@
   <div class="wrapper cookie__content">
     <p class="cookie__text">
       We use cookies to give you the best online experience. By using our
-      website, you agree to our use of cookies in accordance with our cookie
-      policy.
+      website, you agree to our use of cookies in accordance with our <a
+        href="#">cookie policy</a
+      >.
     </p>
     <button class="cookie__button">
       <span class="line"></span>
