--- a/src/components/Navigation/FooterNavigation.astro
+++ b/src/components/Navigation/FooterNavigation.astro
@@ -21,13 +21,21 @@
       <a class="footer__nav_menu_item_link" href="#">Legal</a>
     </li>
     <li class="footer__nav_menu_item">
-      <a class="footer__nav_menu_item_link" href="#">Privacy Notice</a>
+      <a
+        class="footer__nav_menu_item_link"
+        href="https://alexion.com/Legal#privacynotice"
+        target="_blank">Privacy Notice</a
+      >
     </li>
     <li class="footer__nav_menu_item">
       <a class="footer__nav_menu_item_link" href="#">Site Map</a>
     </li>
     <li class="footer__nav_menu_item">
-      <a class="footer__nav_menu_item_link" href="#">Terms of Use</a>
+      <a
+        class="footer__nav_menu_item_link"
+        href="https://alexion.com/Legal#termsofuse"
+        target="_blank">Terms of Use</a
+      >
     </li>
   </ul>
 </nav>
