--- a/src/styles/components/_footer-navigation.scss
+++ b/src/styles/components/_footer-navigation.scss
@@ -6,6 +6,12 @@
     line-height: 1.3125rem;
     margin-bottom: 0.75rem;
 
+    @include media('tablet') {
+      font-size: 1rem;
+      line-height: 1.5rem;
+      margin-bottom: 1rem;
+    }
+
     &:last-of-type {
       margin-bottom: 0.25rem;
     }
