--- a/src/styles/components/_footer-navigation.scss
+++ b/src/styles/components/_footer-navigation.scss
@@ -12,6 +12,10 @@
       margin-bottom: 1rem;
     }
 
+    @media screen and (min-width: 1024px) {
+      margin-bottom: 0;
+    }
+
     &:last-of-type {
       margin-bottom: 0.25rem;
     }
