--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -17,3 +17,4 @@
 @import './components/_pinch-to-zoom.scss';
 @import './components/_footer.scss';
 @import './components/_footer-navigation.scss';
+@import './components/case-file';
