--- a/src/styles/settings/_reset.scss
+++ b/src/styles/settings/_reset.scss
@@ -218,6 +218,7 @@ img {
 body {
   position: relative;
   margin: 0;
+  overflow: hidden;
   min-height: 100vh;
   font-size: 100%;
   font-family: var(--primary-font);
