svg images updated to png

--- a/src/components/CaseFile.astro
+++ b/src/components/CaseFile.astro
@@ -10,7 +10,7 @@ type Props = {
 
 const {
   imgSrc,
-  path = "/assets/images/" + imgSrc + ".svg",
+  path = "/assets/images/" + imgSrc + ".png",
   imgAlt,
   link,
   LinkTarget,
