--- a/src/components/CaseFile.astro
+++ b/src/components/CaseFile.astro
@@ -23,7 +23,7 @@ const {
     <img src={path} alt={imgAlt ? imgAlt : " "} class="case-file__image">
     <p class={`case-file__text ${className ? className : ' '}`}><slot /></p>
     <div class="case-file__anchor-container">
-        <a href={link} target={LinkTarget ? LinkTarget : "_self"} class="case-file__anchor">Learn more</a>
+        <a href={link} target={LinkTarget ? LinkTarget : "_self"} class="case-file__anchor">Learn More</a>
         <span>&gt;</span>
     </div>
 </div>
