--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -5,7 +5,7 @@ const currentYear = new Date().getFullYear();
 ---
 
 <footer class="footer">
-  <div class="footer__grid">
+  <div class="wrapper footer__grid">
     <!-- Footer Logo -->
     <div class="footer__logo">
       <a href="/" class="footer__logo_link">
