max-width footer grid updated to 90rem

--- a/src/styles/components/_footer.scss
+++ b/src/styles/components/_footer.scss
@@ -12,7 +12,7 @@
     grid-row-gap: 0px;
     margin-right: auto;
     margin-left: auto;
-    max-width: 1440px;
+    max-width: 90rem;
 
     @media screen and (min-width: 1024px) {
       grid-template-columns: 306px 1fr 162px;
