Update Cookie Background Color

--- a/src/styles/components/_cookie.scss
+++ b/src/styles/components/_cookie.scss
@@ -1,5 +1,5 @@
 .cookie {
-  background-color: $color-carbon;
+  background-color: $color-blue;
   font-weight: 400;
   font-size: 1.0625rem;
   line-height: 1.625rem;
