--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,18 +1,20 @@
 ---
-import HeaderNavigation from "./Navigation/HeaderNavigation.astro";
+import HeaderLogo from "./HeaderLogo.astro";
+import HeaderMobileMenuToggle from "./HeaderMobileMenuToggle.astro";
+import HeaderPrimaryNavigation from "./Navigation/HeaderPrimaryNavigation.astro";
+import HeaderSecondaryNavigation from "./Navigation/HeaderSecondaryNavigation.astro";
 ---
 
 <header class="site__header">
   <div class="header__inner">
     <div class="wrapper">
-      <div class="logo">
-        <a href="/">
-          Logo Here
-          <!-- <img src="/assets/images/LOGO.png" alt="ALT" /> -->
-        </a>
+      <div class="header__mobile">
+        <HeaderLogo />
+        <HeaderMobileMenuToggle />
       </div>
-      <div class="navigation">
-        <HeaderNavigation />
+      <div class="header__mobile_menu">
+        <HeaderPrimaryNavigation />
+        <HeaderSecondaryNavigation />
       </div>
     </div>
   </div>
