--- a/src/styles/settings/_layouts.scss
+++ b/src/styles/settings/_layouts.scss
@@ -27,7 +27,7 @@
     position: relative;
     margin: 0 auto;
     width: 100%;
-    max-width: var(--wrapper-margin);
+    max-width: var(--wrapper-max-width);
 
     &--only-left {
         max-width: calc(100% - (var(--wrapper-margin) / 2));
