design page updated for unbranded project

--- a/src/pages/design.astro
+++ b/src/pages/design.astro
@@ -35,6 +35,87 @@ import "../styles/settings/_design.scss";
             </div>
             <p class="color__variable">$color-white</p>
           </div>
+          <div class="color">
+            <div
+              class="color__box"
+              style="background-color: #526CAD; border: 1px solid #000"
+            >
+              <p class="color__hex">#526CAD</p>
+            </div>
+            <p class="color__variable">$color-blue</p>
+          </div>
+          <div class="color">
+            <div
+              class="color__box"
+              style="background-color: #CF1C0A; border: 1px solid #000"
+            >
+              <p class="color__hex">#CF1C0A</p>
+            </div>
+            <p class="color__variable">$color-red</p>
+          </div>
+          <div class="color">
+            <div
+              class="color__box"
+              style="background-color: #F3E6C3; border: 1px solid #000"
+            >
+              <p class="color__hex">#F3E6C3</p>
+            </div>
+            <p class="color__variable">$color-folder</p>
+          </div>
+          <div class="color">
+            <div
+              class="color__box"
+              style="background-color: #617D44; border: 1px solid #000"
+            >
+              <p class="color__hex">#617D44</p>
+            </div>
+            <p class="color__variable">$color-green</p>
+          </div>
+          <div class="color">
+            <div
+              class="color__box"
+              style="background-color: #DFE2E9; border: 1px solid #000"
+            >
+              <p class="color__hex">#DFE2E9</p>
+            </div>
+            <p class="color__variable">$color-platinum</p>
+          </div>
+          <div class="color">
+            <div
+              class="color__box"
+              style="background-color: #E2A842; border: 1px solid #000"
+            >
+              <p class="color__hex">#E2A842</p>
+            </div>
+            <p class="color__variable">$color-envelop</p>
+          </div>
+          <div class="color">
+            <div
+              class="color__box"
+              style="background-color: #1F1511; border: 1px solid #000"
+            >
+              <p class="color__hex">#1F1511</p>
+            </div>
+            <p class="color__variable">$color-carbon</p>
+          </div>
+          <div class="color">
+            <div
+              class="color__box"
+              style="background-color: #E5E9F2; border: 1px solid #000"
+            >
+              <p class="color__hex">#E5E9F2</p>
+            </div>
+            <p class="color__variable">$color-texture</p>
+          </div>
+          <div class="color">
+            <div
+              class="color__box"
+              style="background-color: #626468; border: 1px solid #000"
+            >
+              <p class="color__hex">#626468</p>
+            </div>
+            <p class="color__variable">$color-granite-grey</p>
+          </div>
         </div>
       </div>
     </section>
