Update Header Logo

--- a/src/components/HeaderLogo.astro
+++ b/src/components/HeaderLogo.astro
@@ -1,6 +1,5 @@
 <div class="logo">
   <a href="/">
-    Logo Here
-    <!-- <img src="/assets/images/LOGO.png" alt="ALT" /> -->
+    <img src="/assets/images/header-logo.png" alt="ALPD Logo" />
   </a>
 </div>
