Update Header Layout

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -12,10 +12,16 @@ import HeaderSecondaryNavigation from "./Navigation/HeaderSecondaryNavigation.as
         <HeaderLogo />
         <HeaderMobileMenuToggle />
       </div>
-      <div class="header__mobile_menu">
+
+      <div class="header__desktop">
+        <HeaderLogo />
         <HeaderPrimaryNavigation />
         <HeaderSecondaryNavigation />
       </div>
+    </div>
+    <div class="header__mobile mobile__menu">
+      <HeaderPrimaryNavigation />
+      <HeaderSecondaryNavigation />
     </div>
   </div>
 </header>
