--- a/src/styles/settings/_reset.scss
+++ b/src/styles/settings/_reset.scss
@@ -1,6 +1,6 @@
 :root {
   --black: #000000;
-
+  --body-background: #000000;
   --primary-font: Helvetica, Arial, sans-serif;
   --secondary-font: Verdana;
 }
@@ -223,6 +223,7 @@ body {
   font-size: 100%;
   font-family: var(--primary-font);
   color: var(--black);
+  // background-color: var(--body-background);
   // -webkit-hyphens: auto;
   // -ms-hyphens: auto;
   // hyphens: auto;
