--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -111,16 +111,22 @@
       position: absolute;
       top: 95%;
       left: 0;
-      width: 100%;
       background-color: $color-black;
+      height: 100vh;
+      overflow-y: scroll;
       padding-top: 0;
       padding-right: 1.4375rem;
       padding-bottom: 1.5rem;
       padding-left: 1.4375rem;
-      z-index: 1;
+      width: 100%;
+      z-index: 3;
 
       @media screen and (min-width: 375px) {
         top: 100%;
+      }
+
+      @media screen and (min-width: 375px) {
+        overflow-y: auto;
       }
 
       .nav__menu {
