--- a/src/pages/design.astro
+++ b/src/pages/design.astro
@@ -125,63 +125,190 @@ import "../styles/settings/_design.scss";
         <h1 class="title">Fonts</h1>
 
         <div class="fonts-preview">
-          <h2>Roboto</h2>
-          <p>AaBbCcDdEeFfGgHhIiJjKkLlMmNnOoPpQqRrSsTtUuVvWwXxYyZz</p>
-          <p>1234567890</p>
-          <p>!@#$%^&*(</p>
+          <h2 style="font-family: inter;">Barlow</h2>
+          <p style="font-family: inter;">AaBbCcDdEeFfGgHhIiJjKkLlMmNnOoPpQqRrSsTtUuVvWwXxYyZz</p>
+          <p style="font-family: inter;">1234567890</p>
+          <p style="font-family: inter;">!@#$%^&*(</p>
         </div>
+      
 
         <table>
           <thead>
             <tr>
-              <th>Tag</th>
-              <th>Weight</th>
-              <th>Size</th>
-              <th>Line height</th>
+              <th style="font-family: inter;">Tag</th>
+              <th style="font-family: inter;">Weight</th>
+              <th style="font-family: inter;">Size</th>
+              <th style="font-family: inter;">Line height</th>
             </tr>
           </thead>
           <tbody>
             <tr class="h1">
-              <td>h1</td>
-              <td>Bold</td>
-              <td>40px</td>
-              <td>46.88px</td>
+              <td style="font-family: inter;">h1</td>
+              <td style="font-family: inter;">Bold</td>
+              <td style="font-family: inter;">40px</td>
+              <td style="font-family: inter;">46.88px</td>
             </tr>
             <tr class="h2">
-              <td>h2</td>
-              <td>600</td>
-              <td>30px</td>
-              <td>35.16px</td>
+              <td style="font-family: inter;">h2</td>
+              <td style="font-family: inter;">600</td>
+              <td style="font-family: inter;">30px</td>
+              <td style="font-family: inter;">35.16px</td>
             </tr>
             <tr class="h3">
-              <td>h3</td>
-              <td>500</td>
-              <td>24px</td>
-              <td>28.13px</td>
+              <td style="font-family: inter;">h3</td>
+              <td style="font-family: inter;">500</td>
+              <td style="font-family: inter;">24px</td>
+              <td style="font-family: inter;">28.13px</td>
             </tr>
             <tr class="h4">
-              <td>h4</td>
-              <td>500</td>
-              <td>20px</td>
-              <td>23.44px</td>
+              <td style="font-family: inter;">h4</td>
+              <td style="font-family: inter;">500</td>
+              <td style="font-family: inter;">20px</td>
+              <td style="font-family: inter;">23.44px</td>
             </tr>
             <tr class="h5">
-              <td>h5</td>
-              <td>500</td>
-              <td>16px</td>
-              <td>24px</td>
+              <td style="font-family: inter;">h5</td>
+              <td style="font-family: inter;">500</td>
+              <td style="font-family: inter;">16px</td>
+              <td style="font-family: inter;">24px</td>
             </tr>
             <tr class="p">
-              <td>p</td>
-              <td>400</td>
-              <td>18px</td>
-              <td>21.09px</td>
+              <td style="font-family: inter;">p</td>
+              <td style="font-family: inter;">400</td>
+              <td style="font-family: inter;">18px</td>
+              <td style="font-family: inter;">21.09px</td>
             </tr>
             <tr class="small">
-              <td>small</td>
-              <td>300</td>
-              <td>12px</td>
-              <td>14.06px</td>
+              <td style="font-family: inter;">small</td>
+              <td style="font-family: inter;">300</td>
+              <td style="font-family: inter;">12px</td>
+              <td style="font-family: inter;">14.06px</td>
+            </tr>
+          </tbody>
+        </table>
+
+        <div class="fonts-preview">
+          <h2 style="font-family: oswald;">Oswald</h2>
+          <p style="font-family: oswald;">AaBbCcDdEeFfGgHhIiJjKkLlMmNnOoPpQqRrSsTtUuVvWwXxYyZz</p>
+          <p style="font-family: oswald;">1234567890</p>
+          <p style="font-family: oswald;">!@#$%^&*(</p>
+        </div>
+      
+
+        <table>
+          <thead>
+            <tr>
+              <th style="font-family: oswald;">Tag</th>
+              <th style="font-family: oswald;">Weight</th>
+              <th style="font-family: oswald;">Size</th>
+              <th style="font-family: oswald;">Line height</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr class="h1">
+              <td style="font-family: oswald;">h1</td>
+              <td style="font-family: oswald;">Bold</td>
+              <td style="font-family: oswald;">40px</td>
+              <td style="font-family: oswald;">46.88px</td>
+            </tr>
+            <tr class="h2">
+              <td style="font-family: oswald;">h2</td>
+              <td style="font-family: oswald;">600</td>
+              <td style="font-family: oswald;">30px</td>
+              <td style="font-family: oswald;">35.16px</td>
+            </tr>
+            <tr class="h3">
+              <td style="font-family: oswald;">h3</td>
+              <td style="font-family: oswald;">500</td>
+              <td style="font-family: oswald;">24px</td>
+              <td style="font-family: oswald;">28.13px</td>
+            </tr>
+            <tr class="h4">
+              <td style="font-family: oswald;">h4</td>
+              <td style="font-family: oswald;">500</td>
+              <td style="font-family: oswald;">20px</td>
+              <td style="font-family: oswald;">23.44px</td>
+            </tr>
+            <tr class="h5">
+              <td style="font-family: oswald;">h5</td>
+              <td style="font-family: oswald;">500</td>
+              <td style="font-family: oswald;">16px</td>
+              <td style="font-family: oswald;">24px</td>
+            </tr>
+            <tr class="p">
+              <td style="font-family: oswald;">p</td>
+              <td style="font-family: oswald;">400</td>
+              <td style="font-family: oswald;">18px</td>
+              <td style="font-family: oswald;">21.09px</td>
+            </tr>
+            <tr class="small">
+              <td style="font-family: oswald;">small</td>
+              <td style="font-family: oswald;">300</td>
+              <td style="font-family: oswald;">12px</td>
+              <td style="font-family: oswald;">14.06px</td>
+            </tr>
+          </tbody>
+        </table>
+
+        <div class="fonts-preview">
+          <h2 style="font-family: veneer;">Veneer</h2>
+          <p style="font-family: veneer;">AaBbCcDdEeFfGgHhIiJjKkLlMmNnOoPpQqRrSsTtUuVvWwXxYyZz</p>
+          <p style="font-family: veneer;">1234567890</p>
+          <p style="font-family: veneer;">!@#$%^&*(</p>
+        </div>
+      
+
+        <table>
+          <thead>
+            <tr>
+              <th style="font-family: veneer;">Tag</th>
+              <th style="font-family: veneer;">Weight</th>
+              <th style="font-family: veneer;">Size</th>
+              <th style="font-family: veneer;">Line height</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr class="h1">
+              <td style="font-family: veneer;">h1</td>
+              <td style="font-family: veneer;">Bold</td>
+              <td style="font-family: veneer;">40px</td>
+              <td style="font-family: veneer;">46.88px</td>
+            </tr>
+            <tr class="h2">
+              <td style="font-family: veneer;">h2</td>
+              <td style="font-family: veneer;">600</td>
+              <td style="font-family: veneer;">30px</td>
+              <td style="font-family: veneer;">35.16px</td>
+            </tr>
+            <tr class="h3">
+              <td style="font-family: veneer;">h3</td>
+              <td style="font-family: veneer;">500</td>
+              <td style="font-family: veneer;">24px</td>
+              <td style="font-family: veneer;">28.13px</td>
+            </tr>
+            <tr class="h4">
+              <td style="font-family: veneer;">h4</td>
+              <td style="font-family: veneer;">500</td>
+              <td style="font-family: veneer;">20px</td>
+              <td style="font-family: veneer;">23.44px</td>
+            </tr>
+            <tr class="h5">
+              <td style="font-family: veneer;">h5</td>
+              <td style="font-family: veneer;">500</td>
+              <td style="font-family: veneer;">16px</td>
+              <td style="font-family: veneer;">24px</td>
+            </tr>
+            <tr class="p">
+              <td style="font-family: veneer;">p</td>
+              <td style="font-family: veneer;">400</td>
+              <td style="font-family: veneer;">18px</td>
+              <td style="font-family: veneer;">21.09px</td>
+            </tr>
+            <tr class="small">
+              <td style="font-family: veneer;">small</td>
+              <td style="font-family: veneer;">300</td>
+              <td style="font-family: veneer;">12px</td>
+              <td style="font-family: veneer;">14.06px</td>
             </tr>
           </tbody>
         </table>
