Fix Menu Item CSS Class

--- a/src/components/Navigation/HeaderSecondaryNavigation.astro
+++ b/src/components/Navigation/HeaderSecondaryNavigation.astro
@@ -11,7 +11,7 @@
         <a href="#" class="nav__menu_item_link">Patient Case Files</a>
       </li>
       <li class="nav__menu_item">
-        <a href="#" class="nav__sub_menu_item_link">ALP Calculator</a>
+        <a href="#" class="nav__menu_item_link">ALP Calculator</a>
       </li>
     </ul>
   </nav>
