--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -90,22 +90,6 @@
     display: none;
     position: relative;
 
-    @include transition('display', 2s, ease-in-out);
-
-    &::before {
-      content: '';
-      position: absolute;
-      top: 0;
-      left: 0;
-      background-image: url('/assets/images/mobile-menu-decoration.png');
-      background-size: cover;
-      background-repeat: no-repeat;
-      // background-position: center;
-      width: 100%;
-      height: 100%;
-      z-index: 1;
-    }
-
     &.is--open {
       display: block;
       position: absolute;
@@ -115,10 +99,7 @@
       height: 100vh;
       overflow-y: scroll;
       padding-top: 0;
-      padding-right: 1.4375rem;
-      padding-bottom: 1.5rem;
-      padding-left: 1.4375rem;
-      width: 100%;
+      width: 375px;
       z-index: 3;
 
       @media screen and (min-width: 375px) {
@@ -129,23 +110,68 @@
         overflow-y: auto;
       }
 
+      .header__primary_nav {
+        position: relative;
+        @include transition('display', 2s, ease-in-out);
+
+        &::before {
+          content: '';
+          position: absolute;
+          top: 0;
+          left: 0;
+          background-image: url('/assets/images/mobile-menu-decoration.png');
+          background-size: cover;
+          background-repeat: no-repeat;
+          // background-position: center;
+          width: 100%;
+          height: 100%;
+          z-index: 1;
+        }
+      }
+
       .nav__menu {
         position: relative;
         display: grid;
         grid-template-columns: 1fr;
-        grid-gap: 1rem;
+        // grid-gap: 1rem;
+        height: 374px;
+        padding-right: 1.4375rem;
+        padding-bottom: 1.5rem;
+        padding-left: 1.4375rem;
         z-index: 2;
 
+        &.main__navigation {
+          &::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            background-image: url('/assets/images/mobile-menu-items-decoration.png');
+            background-position-y: -78px;
+            background-repeat: no-repeat;
+            width: 375px;
+            height: 100%;
+            z-index: 1;
+          }
+        }
+
         &_item {
+          position: relative;
           display: block;
           text-align: left;
+          z-index: 2;
+
+          &:first-of-type a {
+            padding-top: 0.85rem;
+          }
 
           &_link {
             color: $color-white;
-            font-size: 1.25rem;
+            font-family: 'Oswald';
+            font-style: normal;
             font-weight: 700;
-            padding-top: 1.5rem;
-            padding-bottom: 0rem;
+            font-size: 1.3125rem;
+            line-height: 1.625rem;
             text-transform: uppercase;
           }
         }
