--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -87,46 +87,52 @@
   }
 
   &.mobile__menu {
-    display: none;
     position: relative;
+    background-color: $color-black;
+    display: none;
 
     &.is--open {
       display: block;
       position: absolute;
       top: 95%;
       left: 0;
-      background-color: $color-black;
-      height: 100vh;
-      overflow-y: scroll;
+
+      // height: 100vh;
+      // overflow-y: scroll;
       padding-top: 0;
       width: 375px;
       z-index: 3;
+
+      &::before {
+        content: '';
+        position: absolute;
+        top: 0;
+        left: 0;
+        background-image: url('/assets/images/mobile-menu-decoration.png');
+        background-size: cover;
+        background-repeat: no-repeat;
+        // background-position: center;
+        width: 100%;
+        height: 100%;
+        z-index: 1;
+      }
 
       @media screen and (min-width: 375px) {
         top: 100%;
       }
 
       @media screen and (min-width: 375px) {
-        overflow-y: auto;
+        // overflow-y: auto;
+      }
+
+      @media screen and (min-width: 1100px) {
+        display: none;
       }
 
       .header__primary_nav {
         position: relative;
+        background-color: $color-black;
         @include transition('display', 2s, ease-in-out);
-
-        &::before {
-          content: '';
-          position: absolute;
-          top: 0;
-          left: 0;
-          background-image: url('/assets/images/mobile-menu-decoration.png');
-          background-size: cover;
-          background-repeat: no-repeat;
-          // background-position: center;
-          width: 100%;
-          height: 100%;
-          z-index: 1;
-        }
       }
 
       .nav__menu {
@@ -141,6 +147,8 @@
         z-index: 2;
 
         &.main__navigation {
+
+
           &::before {
             content: '';
             position: absolute;
@@ -148,6 +156,40 @@
             left: 0;
             background-image: url('/assets/images/mobile-menu-items-decoration.png');
             background-position-y: -78px;
+            background-repeat: no-repeat;
+            width: 375px;
+            height: 100%;
+            z-index: 1;
+          }
+        }
+
+        &.secondary__navigation {
+
+          >* {
+            position: relative;
+            z-index: 3;
+          }
+
+          &::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+            margin: auto;
+            background-image: url('/assets/images/mobile-secondary-nav-tape.png');
+            background-repeat: no-repeat;
+            height: 67px;
+            width: 202px;
+            z-index: 2;
+          }
+
+          &::after {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            background-image: url('/assets/images/mobile-secondary-nav-bg.png');
             background-repeat: no-repeat;
             width: 375px;
             height: 100%;
