Fix Secondary Nav CSS Class

--- a/src/components/Navigation/HeaderSecondaryNavigation.astro
+++ b/src/components/Navigation/HeaderSecondaryNavigation.astro
@@ -1,6 +1,6 @@
 <div class="header__secondary_nav">
   <nav class="site__navigation">
-    <ul class="secondary__nav nav__menu">
+    <ul class="secondary__navigation nav__menu">
       <li class="nav__menu_item">
         <a href="#" class="nav__menu_item_link">Stay Connected</a>
       </li>
