--- a/src/styles/settings/_variables.scss
+++ b/src/styles/settings/_variables.scss
@@ -2,7 +2,7 @@
 with the color name as the key and the hex
 as the value
 
-And we are goint to use it in _utils.scss*/
+And we are going to use it in _utils.scss*/
 $colors: (
     "folder": #F3E6C3,
     "red": #CF1C0A,
