--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -11,6 +11,7 @@
 @import './components/_cookie.scss';
 @import './components/_isi.scss';
 @import './components/_tabs.scss';
+@import './components/_main-hero.scss';
 @import './components/_forms.scss';
 @import './components/_accordions.scss';
 @import './components/_exit-modal.scss';
