--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,11 +2,11 @@
 import Layout from "../layouts/Layout.astro";
 import CaseFile from "../components/CaseFile.astro";
 import Card from "../components/Card.astro";
+import MainHero from '../components/MainHero.astro';
 ---
 
 <Layout title="Welcome" showHeader={false} showISI={false}>
-  <main>
-
+    <MainHero/>
     <section class="alp-files">
 
       <h2 class="files-heading">Read THE case files and collect evidence</h2>
@@ -34,6 +34,4 @@ import Card from "../components/Card.astro";
 
     <div class="red-string"></div>
   </section>
-    
-  </main>
 </Layout>
