--- a/src/styles/components/_case-file.scss
+++ b/src/styles/components/_case-file.scss
@@ -113,7 +113,10 @@
 }
 
 .red-string{
+    display: none;
+
     @media screen and (min-width:768px) {
+    display: block;
     position: absolute;
     width: 1666.19px;
     height: 327.14px;
