--- a/src/styles/settings/_global.scss
+++ b/src/styles/settings/_global.scss
@@ -7,59 +7,25 @@ h3,
 h4,
 h5,
 h6 {
-  color: $color-black;
-  font-weight: 500;
-  font-stretch: normal;
-  font-style: normal;
-  letter-spacing: normal;
-  line-height: 1.5;
 }
 
 h1 {
-  font-size: 1.875rem;
-  font-weight: bold;
-  line-height: 2.1563rem;
-
-  @include media('tablet') {
-    font-size: 2.5rem;
-    line-height: 2.925rem;
-  }
 
 }
 
 h2 {
-  font-size: 1.25rem;
-  font-weight: 600;
-  line-height: 1.5625rem;
-
-  @include media('tablet') {
-    font-size: 1.875rem;
-    line-height: 2.3438rem;
-  }
 }
 
 h3 {
-  font-size: 1.5rem;
-  font-weight: 500;
-  line-height: 1.7581rem;
 }
 
 h4 {
-  font-size: 1.25rem;
-  line-height: 1.465rem;
 }
 
 h5 {
-  font-size: 1rem;
-  line-height: 1.5rem;
 }
 
 p {
-  color: $color-black;
-  font-size: 1rem;
-  font-style: normal;
-  font-weight: 300;
-  line-height: 1.3181rem;
 }
 
 label a,
@@ -96,4 +62,9 @@ sup.symbol-sup {
   font-size: inherit;
   line-height: 0;
   top: initial;
+}
+
+.red-string {
+    border-bottom: 2px solid $color-red;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
